build(users): add getUsers controller, router and swagger docs
