# backend/utils/swagger/components.yaml
@@ -207,6 +207,16 @@ components:
       enum:
         - albumtrack
         - single
+    user_image_size:
+      description: |
+        The size of the cover of the returned resource. A size of n
+        returns the 'nxn-sized' cover image.
+        type: integer
+      enum:
+        - 30
+        - 50
+        - 100
+      default: 100
     vocal_instrumental:
       type: string
       enum:
